
#copy data to build folder
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../common/data/ DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/../data)

ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(physics)
ADD_SUBDIRECTORY(vehicle)
ADD_SUBDIRECTORY(osgearth)
ADD_SUBDIRECTORY(editor)

#install data
INSTALL(DIRECTORY ../common/data DESTINATION ${GASS_INSTALL_SAMPLES_DIR}/../ FILES_MATCHING PATTERN "*.*" PATTERN ".svn" EXCLUDE)