
#copy data to build folder
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../common/data/ DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/../data)

#ADD_SUBDIRECTORY(rtc)
ADD_SUBDIRECTORY(network)
if(GASS_BUILD_PLUGIN_MYGUI)
	ADD_SUBDIRECTORY(gui)
endif()
if(MSVC)
	ADD_SUBDIRECTORY(physics)
	ADD_SUBDIRECTORY(editor)
	ADD_SUBDIRECTORY(osgearth)
endif()
ADD_SUBDIRECTORY(vehicle)

if(GASS_BUILD_PLUGIN_OGRE)
	ADD_SUBDIRECTORY(ogre)
endif()

#install data
INSTALL(DIRECTORY ../common/data DESTINATION ${GASS_INSTALL_SAMPLES_DIR}/../ FILES_MATCHING PATTERN "*.*" PATTERN ".svn" EXCLUDE)
