
#copy data to build folder
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../common/data/ DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/../data)

ADD_SUBDIRECTORY(network)

if(GASS_BUILD_PLUGIN_OSGEARTH)
	ADD_SUBDIRECTORY(osgearth)
endif()

ADD_SUBDIRECTORY(vehicle)
ADD_SUBDIRECTORY(physics)
ADD_SUBDIRECTORY(editor)


#install data
INSTALL(DIRECTORY ../common/data DESTINATION ${GASS_INSTALL_SAMPLES_DIR}/../ FILES_MATCHING PATTERN "*.*" PATTERN ".svn" EXCLUDE)
