#always build depdency free plugins 
ADD_SUBDIRECTORY(Base)
ADD_SUBDIRECTORY(RecastNavigation)
ADD_SUBDIRECTORY(Vehicle)
ADD_SUBDIRECTORY(Input)
ADD_SUBDIRECTORY(RoadNetwork)

if(GASS_BUILD_PLUGIN_OSG)
	ADD_SUBDIRECTORY(OSG)
endif()

if(GASS_BUILD_PLUGIN_ODE)
	ADD_SUBDIRECTORY(ODE)
endif()

if(GASS_BUILD_PLUGIN_OIS)
	ADD_SUBDIRECTORY(OIS)
endif()

if(GASS_BUILD_PLUGIN_OPENAL)
	ADD_SUBDIRECTORY(OpenAL)
endif()

if(GASS_BUILD_PLUGIN_RAKNET)
	ADD_SUBDIRECTORY(RakNet)
endif()

if(GASS_BUILD_PLUGIN_PHYSX)
	ADD_SUBDIRECTORY(PhysX)
endif()

if(GASS_BUILD_PLUGIN_MYGUI)
	ADD_SUBDIRECTORY(MyGUI)
endif()

if(GASS_BUILD_PLUGIN_OSGEARTH)
	ADD_SUBDIRECTORY(OSGEarth)
endif()

