
if(GASS_BUILD_PLUGIN_BASE)
	ADD_SUBDIRECTORY(Base)
endif()

if(GASS_BUILD_PLUGIN_RECASTNAVIGATION)
	ADD_SUBDIRECTORY(RecastNavigation)
endif()

if(GASS_BUILD_PLUGIN_VEHICLE)
	ADD_SUBDIRECTORY(Vehicle)
endif()

if(GASS_BUILD_PLUGIN_INPUT)
	ADD_SUBDIRECTORY(Input)
endif()

if(GASS_BUILD_PLUGIN_ROADNETWORK)
	ADD_SUBDIRECTORY(RoadNetwork)
endif()

if(GASS_BUILD_PLUGIN_OSG)
	ADD_SUBDIRECTORY(OSG)
endif()

if(GASS_BUILD_PLUGIN_OIS)
	ADD_SUBDIRECTORY(OIS)
endif()

if(GASS_BUILD_PLUGIN_OPENAL)
	ADD_SUBDIRECTORY(OpenAL)
endif()

if(GASS_BUILD_PLUGIN_RAKNET)
	ADD_SUBDIRECTORY(RakNet)
endif()

if(GASS_BUILD_PLUGIN_PHYSX)
	ADD_SUBDIRECTORY(PhysX)
endif()

if(GASS_BUILD_PLUGIN_OSGEARTH)
	ADD_SUBDIRECTORY(OSGEarth)
endif()

