#Add dependencies
find_package(GASSSharedLibraries)
FILE(COPY ${ALL_BIN_FILES_RELEASE}  DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
FILE(COPY ${ALL_BIN_FILES_DEBUG}  DESTINATION  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}) 
ADD_SUBDIRECTORY(sim_demo)

INSTALL(FILES ${ALL_BIN_FILES_RELEASE} DESTINATION bin CONFIGURATIONS Release)
INSTALL(FILES ${ALL_BIN_FILES_DEBUG} DESTINATION bin CONFIGURATIONS Debug)

#ADD_SUBDIRECTORY( physics)
#ADD_SUBDIRECTORY( vehicle_demo)

