gass_setup_plugin(GASSPluginGame)
#install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/plugins FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)
install(FILES  ${CMAKE_CURRENT_SOURCE_DIR}/GameMessages.h DESTINATION ${GASS_INSTALL_INCLUDE_DIR}/plugins/Game)
install(FILES  ${CMAKE_CURRENT_SOURCE_DIR}/DetectionData.h DESTINATION ${GASS_INSTALL_INCLUDE_DIR}/plugins/Game)
install(FILES  ${CMAKE_CURRENT_SOURCE_DIR}/PlatformType.h DESTINATION ${GASS_INSTALL_INCLUDE_DIR}/plugins/Game)

